[tool.poetry]
name = "gohan-map-backend"
version = "0.1.0"
description = ""
authors = ["karintou8710"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
poethepoet = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"


[tool.poe.tasks]
serve = "uvicorn app.main:app --reload"
format = "black ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
