[tool.poetry]
name = "gohan-map-backend"
version = "0.1.0"
description = ""
authors = ["karintou8710"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
poethepoet = "^0.24.1"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"
isort = "^5.12.0"


[tool.poe.tasks]
serve = "uvicorn main:app --reload"
format = "isort . && black ."
type = "mypy app/"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
